<resources>
    <string name="app_name">TagBiz</string>
    <string name="username_hint">Enter username*</string>
    <string name="password_hint">Enter password*</string>
    <string name="login_button">Login</string>
    <string name="publish_button">Publish</string>
    <string name="gallery_button">Select media to publish</string>
    <string name="select">Select Outlet</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="feeds">Feeds</string>
    <string name="publisher">Publisher</string>
    <string name="highlight">Highlight</string>
    <string name="outlets">Switch Account</string>
    <string name="title_hint">Title*</string>
    <string name="title_hint_highlight">Title</string>
    <string name="duration_hint">Duration in sec*</string>
    <string name="duration">20</string>
    <string name="start_hint">Start Date*</string>
    <string name="end_hint">End Date*</string>
    <string name="start_time">Start Time*</string>
    <string name="end_time">End Time*</string>
    <string name="daywise_start_time">Day Start Time*</string>
    <string name="daywise_end_time">Day End Time*</string>
    <string name="all_day">All Days</string>
    <string name="day_wise">Day wise</string>
    <string name="load_more">Load more</string>
    <string name="select_outlet">Select outlet to view Feeds</string>
    <string name="logout">Logout</string>
    <string name="title_activity_main_nav">MainNavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TagBiz</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="error_text">No feeds</string>
    <string name="error_publisher">No publisher</string>
    <string name="error_highlight">No highlight</string>
    <string name="source_text">Select Source</string>
    <string name="gallery">Gallery</string>
    <string name="camera_button">Camera</string>
    <string name="tag_text">\@tagtalk.ai</string>
    <string name="highlight_hint">*Title will be shown as caption on the screen. Leave blank if you do not want any caption.</string>
    <string name="instruction">Place your fingertip on Fingerprint scanner to verify your identity</string>
    <string name="note">Note: Please select video of size up to 20MB and image up to 5MB</string>

    <string name="version">Version 1.0.826112020</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

</resources>
