<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HighlightFragment">

    <RelativeLayout
        android:id="@+id/mainViewLayoutHighlight"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gallery_back"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/gallery_prompt"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/galleryButtonHighlight"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:src="@drawable/gallery_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/galleryButtonHighlight"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:text="@string/gallery_button"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:text="@string/note"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/imageViewLayoutHighlight"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_back"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/selectedImageHighlight"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:visibility="gone" />

        <VideoView
            android:id="@+id/selectedVideoHighlight"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:visibility="visible" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:padding="10dp">

            <ProgressBar
                android:id="@+id/creativeProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/titleEditHighlight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_hint_highlight"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/hintText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleEditHighlight"
                android:textColor="@android:color/white"
                android:text="@string/highlight_hint"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/durationEditHighlight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/duration_hint"
                android:inputType="number"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/duration"
                android:layout_below="@id/hintText"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/durationEditHighlight">

                <Spinner
                    android:id="@+id/outletSpinnerHighlight"
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/select"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/publishButtonHighlight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#88000000"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_alignParentBottom="true"
                android:text="@string/publish_button"
                android:textColor="@android:color/white" />

        </RelativeLayout>
    </LinearLayout>

</FrameLayout>