<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_back"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:id="@+id/previewRL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/select"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/outletSpinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentTop="true" />

        <ImageView
            android:id="@+id/imageViewBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/tagLayout"
            android:layout_below="@id/outletSpinner"
            android:layout_alignParentStart="true"
            android:scaleType="centerCrop"
            android:src="#000" />


        <ImageView
            android:id="@+id/captureView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/tagLayout"
            android:layout_below="@id/outletSpinner"
            android:layout_centerHorizontal="true"
            android:src="#000" />

        <RelativeLayout
            android:id="@+id/tagLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ig_footer_band">

            <TextView
                android:id="@+id/textViewTags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/tag_text"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/publishButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:background="#40ffffff"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/publish_button"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/publishLoader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            style="@style/Widget.AppCompat.ProgressBar"
            android:visibility="gone"/>

    </RelativeLayout>

</RelativeLayout>